--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 /*   https://corhexa.com/  */
 :root {
-    --cor-fundo: #000000;
-    --cor-principal: #15ff00 ;
-    --cor-secundaria: #ff0000;
-    --cor-destaque: #d9ff00;
-    --cor-texto: #ff00d4;
+    --cor-fundo: #ff0000;
+    --cor-principal: #020202 ;
+    --cor-secundaria: #ff7b00;
+    --cor-destaque: #00a2ff;
+    --cor-texto: #ffffff00;
 }
   
 body {
